Separate out landing page component from app-container (needs cleanup)

--- a/public/notebook.css
+++ b/public/notebook.css
@@ -6,6 +6,8 @@ body {
   padding: 0;
 }
 
+
+
 a {
   color: #2A64C7;
   text-decoration: none;
@@ -29,11 +31,20 @@ a:hover {
   transition: all .2s ease-in;
 }
 
+
 .app-container {
   position: relative;
   margin: 0 auto;
   max-width: 1200px;
   padding-top: 4.2em;
+}
+
+.landing-page-container {
+  padding-top: 4.2em;
+}
+
+.landing-page-container:empty {
+  display: none;
 }
 
 .notebook {
@@ -457,6 +468,7 @@ div.ace-content {
 
 @media only screen and (max-width: 800px) {
 
+  .landing-page-container,
   .app-container {
     padding-top: 70px;
   }
