--- a/public/notebook.css
+++ b/public/notebook.css
@@ -39,22 +39,107 @@ a:hover {
 .layout-container {
   margin: 0 auto;
   max-width: 1200px;
+  overflow: auto;
   padding: 2em 1.7em;
-}
-
-.layout-container-condensed {
-  margin: 0 auto;
-  max-width: 1200px;
-  padding: 1em .8em;
-}
-
-.landing-page-container:empty {
-  display: none;
 }
 
 .livebook-header {
   background: #363636;
   color: #fff;
+  overflow: auto;
+}
+
+.livebook-logo,
+.livebook-lede {
+  float: left;
+}
+
+.livebook-logo {
+  margin: 0 auto;
+  opacity: 40em;
+}
+
+.livebook-lede {
+  margin-left: 2em;
+  max-width: 25em;
+}
+
+.livebook-lede h1 {
+  font-family: serif;
+  font-size: 2em;
+  margin: .2em 0;
+}
+
+.livebook-lede h2 {
+  color: #B1CD14;
+  font-size: 1.2em;
+  margin: .02em 0;
+}
+
+.livebook-lede p {
+  margin: .2em 0;
+  font-size: .9em;
+  font-weight: 300;
+}
+
+.livebook-logo {
+  height: 140px;
+}
+
+.gallery-container {
+  overflow: auto;
+}
+
+.gallery-container h2 {
+  color: #222;
+  margin-top: 0;
+}
+
+.gallery-item {
+  background: #fafafa;
+  border: solid 1px #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+  float: left;
+  height: 40%;
+  margin-bottom: 1.2em;
+  padding: 1em 1.1em 1.2em;
+  width: 40%;
+}
+
+.gallery-item:nth-of-type(2n+1) {
+  clear: left;
+  margin-right: 1.2em;
+}
+
+.gallery-item--starter {
+  background: transparent;
+  border-style: dashed;
+}
+
+.gallery-item-header {
+  display: flex;
+  margin-bottom: .5em;
+}
+
+.gallery-item-logo {
+  margin-right: 1em;
+  align-self: center;
+}
+
+.gallery-item-title { }
+
+.gallery-item-title h3 {
+  margin: 0;
+}
+
+.gallery-item-title p {
+  margin: .15em 0;
+}
+
+.gallery-item-footer {
+  font-size: .8em;
+  font-weight: 300;
 }
 
 .notebook {
@@ -62,6 +147,10 @@ a:hover {
   max-width: 1000px;
   min-height: 400pt;
   width: 90%;
+}
+
+.notebook:empty {
+  display: none;
 }
 
 .notebook h1,
@@ -457,6 +546,10 @@ div.ace-content {
 
 #upload.hover {
   border: 6pt dashed #B1CD14;
+}
+
+.text-green {
+  color: #B1CD14;
 }
 
 .blur {
