--- a/public/notebook.css
+++ b/public/notebook.css
@@ -314,6 +314,23 @@ a:hover {
   content: '';
 }
 
+.pyresult-loading {
+  opacity: .3; 
+}
+
+.pyresult-loading-with-message {
+  opacity: .75;
+  position: relative;
+}
+
+.pyresult-loading-with-message::after {
+  content: "Loading the code (sorry for the wait, pal)";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 div.editor { /* !!! this is necessary specificity */
   display: none;
   position: absolute;
