--- a/public/notebook.css
+++ b/public/notebook.css
@@ -14,6 +14,10 @@ a:hover {
   text-decoration: underline;
 }
 
+/*img[data-livebook-placeholder-cell] {
+  display: block;
+}*/
+
 .cursor {
   transition: all .15s ease-out;
 }
@@ -420,7 +424,6 @@ div.ace_error-marker {
   text-decoration: none;
 }
 
-/* yyy */
 .collaborators {
   right: .5em;
   top: 0;
@@ -620,8 +623,6 @@ div.ace-content {
 .notebook-plot:empty {
   display: none;
 }
-
-/* xxx */
 
 @media only screen and (min-width: 800px) {
   .app-container {
