--- a/public/notebook.css
+++ b/public/notebook.css
@@ -14,8 +14,12 @@ a:hover {
   text-decoration: underline;
 }
 
-img[data-livebook-placeholder-cell] {
+/*img[data-livebook-placeholder-cell] {
   display: block;
+}*/
+
+div[contenteditable="true"] {
+  outline: none;
 }
 
 .cursor {
