Smoothen add-code-button UI and summon it on codecell click

--- a/public/notebook.css
+++ b/public/notebook.css
@@ -671,6 +671,14 @@ div.ace-content {
   }
 }
 
+.selected-line {
+  transition: background 100ms ease-in-out;
+}
+
+.livebook-add-code-button {
+  transition: all 80ms ease-out;
+}
+
 @keyframes pulse {
   from {
     opacity: 0.3;
