Apply adam's click-to-add-code QA punchlist

--- a/public/notebook.css
+++ b/public/notebook.css
@@ -676,7 +676,8 @@ div.ace-content {
 }
 
 .livebook-add-code-button {
-  transition: all 80ms ease-out;
+  cursor: pointer;
+  opacity: .6;
 }
 
 @keyframes pulse {
