--- a/public/notebook.css
+++ b/public/notebook.css
@@ -453,7 +453,7 @@ div.ace_error-marker {
 .collaborators {
   right: .5em;
   top: 0;
-  position: absolute;
+  position: fixed;
 }
 
 .collaborators ul {
@@ -469,7 +469,7 @@ div.ace_error-marker {
   padding: .4em .5em .65em .5em;
   position: relative;
 
-  transition: all .3s ease-in-out;
+  /*transition: all .3s ease-in-out;*/
 }
 
 .collaborators li:first-of-type {
@@ -627,14 +627,6 @@ div.ace-content {
   color: #B1CD14;
 }
 
-.blur {
-  -webkit-filter: blur(3px);
-  filter: blur(3px);
-
-  transition: -webkit-filter .2s ease-in-out,
-              filter .2s ease-in-out;
-}
-
 /* C3 STYLES - move to separate file */
 /* side note: yargh we are in specificity hell */
 .notebook .c3-tooltip-container th {
@@ -650,39 +642,10 @@ div.ace-content {
   display: none;
 }
 
-@media only screen and (min-width: 800px) {
-  .app-container {
-    padding-top: 4.2em;
-  }
+/* editor extension shtuff */
 
-  .livebook-nav {
-    box-shadow: none;
-    height: 0;
-  }
-
-  .collaborators {
-    right: .5em;
-    top: .3em;
-  }
-
-  .collaborators li {
-    float: none;
-    margin: 0;
-    margin-top: 1em;
-    padding: 0;
-  }
-
-  .collaborators li:first-of-type {
-    margin-top: .75em;
-  }
-
-  .collaborators-name-change-form::after {
-    height: 15px;
-    right: 1.08em;
-    top: 0;
-    transform: rotate(45deg) translateY(-10.8px);
-    width: 15px;
-  }
+.editor-wrapper {
+  position: relative;
 }
 
 .selected-line {
@@ -696,6 +659,43 @@ div.ace-content {
 .livebook-add-code-button {
   cursor: pointer;
   opacity: .6;
+}
+
+@media only screen and (min-width: 800px) {
+  .app-container {
+    padding-top: 4.2em;
+  }
+
+  .livebook-nav {
+    box-shadow: none;
+    height: 0;
+  }
+
+  .collaborators {
+    position: absolute;
+    right: -3.2em; /* needs to be width of avatar */
+    top: 0;
+    width: 3em;
+  }
+
+  .collaborators li {
+    float: none;
+    margin: 0;
+    /*margin-top: 1em;*/
+    padding: 0;
+  }
+
+  .collaborators li:first-of-type {
+    /*margin-top: .75em;*/
+  }
+
+  .collaborators-name-change-form::after {
+    height: 15px;
+    right: 1.08em;
+    top: 0;
+    transform: rotate(45deg) translateY(-10.8px);
+    width: 15px;
+  }
 }
 
 @keyframes pulse {
