--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -261,7 +261,7 @@ div.ace_editor {
 }
 
 div.ace_scroller {
-  border: .1em solid #ddd;
+  // border: .1em solid #ddd;
   border-radius: .15em;
   /*padding: .8em .85em 1em .8em;*/ /* overflow gets in the way if we include padding D: */ ;
 }
