--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -36,7 +36,7 @@ img[data-livebook-placeholder-cell] {
   top: 0;
   max-width: 1200px;
   width: 100%;
-
+  z-index: 100;
   transition: all .2s ease-in;
 }
 
