:crystal_ball: Local variable syntax magic (first pass)

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -107,6 +107,10 @@ img[data-livebook-placeholder-cell] {
   text-align: justify;
 }
 
+.notebook-syntax-helper {
+  
+}
+
 .notebook .codewrap {
   border: .1em solid #ddd;
   border-radius: .15em;
