Fix line bounciness for new code cells (using important directive :grimacing:)

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -304,6 +304,7 @@ div.ace_scroller {
 
 div.ace_content {
   /*padding: .8em .85em 1em .8em*/
+  margin-top: 0 !important;
 }
 
 div.ace_error-marker {
