Widen default line width and left-align charts

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -642,10 +642,13 @@ div.ace-content {
   background: white;
   margin: 0;
   margin-top: -1.05em; /* MAGICK NUMBER - used to obscure `null` return value */
-  text-align: center;
 }
 .notebook-plot:empty {
   display: none;
+}
+
+.c3-line {
+  stroke-width: 2px;
 }
 
 /* editor extension shtuff */
