Increase axis font size (some bad overlapping ye been warned)

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -651,6 +651,10 @@ div.ace-content {
   stroke-width: 2px;
 }
 
+.c3 svg {
+  font: 13px sans-serif;
+}
+
 /* editor extension shtuff */
 
 .editor-wrapper {
