Make chart point opacity consistent

--- a/src/stylesheets/notebook.scss
+++ b/src/stylesheets/notebook.scss
@@ -651,6 +651,10 @@ div.ace-content {
   stroke-width: 2px;
 }
 
+.c3-circle {
+  opacity: 1 !important;
+}
+
 .c3 svg {
   font: 13px sans-serif;
 }
